--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div id="overlay-1">
             <header id="site-header" class="clearfix">
                 <div class="pull-left">
-                    <h1><a href="#" class ="logo">Developer</a></h1>
+                    <h1><a href="#" class="logo">Developer</a></h1>
                 </div>
                 <div class="pull-right">
                     <nav class="navbar site-nav" role="navigation">
@@ -68,7 +68,8 @@
                     <div class="skills">
 
                     </div> <!-- skills -->
-                    <a href="#contact" target="_blank" class="btn btn-lg btn-hire wow animated zoomIn" id ="headerbtn">Hire Me</a>
+                    <a href="#contact" target="_blank" class="btn btn-lg btn-hire wow animated zoomIn"
+                        id="headerbtn">Hire Me</a>
                 </div> <!-- container -->
             </div> <!-- middle -->
 
@@ -91,9 +92,8 @@
                     <figcaption>
                         <h2 class="hidden-xs">Creative <span>Joe</span></h2>
                         <p class="icon-links">
-                            <a href="#"><i class="fa fa-twitter"></i></a>
                             <a href="#"><i class="fa fa-dribbble"></i></a>
-                            <a href="#"><i class="fa fa-pinterest"></i></a>
+                            <a href="#"><i class="fa fa-github"></i></a>
                         </p>
                     </figcaption>
                 </div>
@@ -104,9 +104,8 @@
                     <figcaption>
                         <h2 class="hidden-xs">Creative <span>Joe</span></h2>
                         <p class="icon-links">
-                            <a href="#"><i class="fa fa-twitter"></i></a>
                             <a href="#"><i class="fa fa-dribbble"></i></a>
-                            <a href="#"><i class="fa fa-pinterest"></i></a>
+                            <a href="#"><i class="fa fa-github"></i></a>
                         </p>
                     </figcaption>
                 </div>
@@ -117,9 +116,8 @@
                     <figcaption>
                         <h2 class="hidden-xs">Creative <span>Joe</span></h2>
                         <p class="icon-links">
-                            <a href="#"><i class="fa fa-twitter"></i></a>
                             <a href="#"><i class="fa fa-dribbble"></i></a>
-                            <a href="#"><i class="fa fa-pinterest"></i></a>
+                            <a href="#"><i class="fa fa-github"></i></a>
                         </p>
                     </figcaption>
                 </div>
@@ -130,9 +128,8 @@
                     <figcaption>
                         <h2 class="hidden-xs">Creative <span>Joe</span></h2>
                         <p class="icon-links">
-                            <a href="#"><i class="fa fa-twitter"></i></a>
                             <a href="#"><i class="fa fa-dribbble"></i></a>
-                            <a href="#"><i class="fa fa-pinterest"></i></a>
+                            <a href="#"><i class="fa fa-github"></i></a>
                         </p>
                     </figcaption>
                 </div>
@@ -143,9 +140,8 @@
                     <figcaption>
                         <h2 class="hidden-xs">Creative <span>Joe</span></h2>
                         <p class="icon-links">
-                            <a href="#"><i class="fa fa-twitter"></i></a>
                             <a href="#"><i class="fa fa-dribbble"></i></a>
-                            <a href="#"><i class="fa fa-pinterest"></i></a>
+                            <a href="#"><i class="fa fa-github"></i></a>
                         </p>
                     </figcaption>
                 </div>
@@ -156,9 +152,8 @@
                     <figcaption>
                         <h2 class="hidden-xs">Creative <span>Joe</span></h2>
                         <p class="icon-links">
-                            <a href="#"><i class="fa fa-twitter"></i></a>
                             <a href="#"><i class="fa fa-dribbble"></i></a>
-                            <a href="#"><i class="fa fa-pinterest"></i></a>
+                            <a href="#"><i class="fa fa-github"></i></a>
                         </p>
                     </figcaption>
                 </div>
@@ -169,9 +164,8 @@
                     <figcaption>
                         <h2 class="hidden-xs">Creative <span>Joe</span></h2>
                         <p class="icon-links">
-                            <a href="#"><i class="fa fa-twitter"></i></a>
                             <a href="#"><i class="fa fa-dribbble"></i></a>
-                            <a href="#"><i class="fa fa-pinterest"></i></a>
+                            <a href="#"><i class="fa fa-github"></i></a>
                         </p>
                     </figcaption>
                 </div>
@@ -182,9 +176,8 @@
                     <figcaption>
                         <h2 class="hidden-xs">Creative <span>Joe</span></h2>
                         <p class="icon-links">
-                            <a href="#"><i class="fa fa-twitter"></i></a>
                             <a href="#"><i class="fa fa-dribbble"></i></a>
-                            <a href="#"><i class="fa fa-pinterest"></i></a>
+                            <a href="#"><i class="fa fa-github"></i></a>
                         </p>
                     </figcaption>
                 </div>
